--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -21,13 +21,20 @@
       <li class="nav-item">
           <%= link_to "Projects", projects_path, class: 'nav-link' %>
       </li>
-      <li class="nav-item">
+      <% if !logged_in?(:labor_staff) %>
+        <li class="nav-item">
           <%= link_to "My List", mylist_path, class: 'nav-link'%>
-      </li>
+        </li>
+      <% end %>
       <li class="nav-item">
-          <%= link_to "Booking", bookings_path, class: 'nav-link' if logged_in?(:user) %>
+          <%= link_to "Booking", bookings_path, class: 'nav-link' if logged_in?(:user) && !logged_in?(:labor_staff) %>
           <%= link_to "Booking", indexadmin_bookings_path, class: 'nav-link' if logged_in?(:labor_staff) %>
       </li>
+      <% if logged_in?(:labor_staff) %>
+        <li class="nav-item">
+          <%= link_to "Admin Board", admin_board_path, class: 'nav-link'%>
+        </li>
+      <% end %>
     </ul>
 
     <ul class="navbar-nav navbar-right">
