--- a/app/views/bookings/_edit.html.erb
+++ b/app/views/bookings/_edit.html.erb
@@ -1,8 +1,8 @@
-<div class="modal fade" id="new_booking">
+<div class="modal fade" id="edit_booking">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Create New Booking</h4>
+        <h4 class="modal-title">Edit Booking</h4>
 
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       </div>
