added delete button

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -26,11 +26,21 @@
         <%= form.text_field :return_date, class: "form-control", :data => {:provide => 'datepicker', 'date-format' => 'yyyy-mm-dd', 'date-autoclose' => 'true', 'date-start-date' => '0d'} %>
       </div>
     </div>
-    <div class="col-md-9">
+    <div class="col-md-6">
     </div>
     <div class="col-md-3">
       <div class="form-group">
         <%= form.submit "Submit", class: "btn btn-primary btn-block"   %>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="form-group">
+        <%= link_to 'Delete',
+                    booking,
+                    method: :delete,
+                    class: 'btn btn-danger btn-block',
+                    data: { confirm: 'Are you sure?' },
+                    remote: true unless @booking.new_record? %>
       </div>
     </div>
   </div>
