--- a/app/views/bookings/_edit.html.erb
+++ b/app/views/bookings/_edit.html.erb
@@ -2,7 +2,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Edit Booking</h4>
+        <h4 class="modal-title">Edit Booking #<%= @booking.id.to_s %> </h4>
 
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       </div>
