--- a/app/views/bookings/indexadmin.html.erb
+++ b/app/views/bookings/indexadmin.html.erb
@@ -1,3 +1,5 @@
+<h3 class="listtext">All Bookings</h3>
+<%= render @all_bookings %>
 
 <%= link_to "Add New Booking", new_booking_path, class: "btn btn-success" if logged_in?(:labor_staff)  %>
 
