hide delete button for normal user

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -33,6 +33,7 @@
         <%= form.submit "Submit", class: "btn btn-primary btn-block"   %>
       </div>
     </div>
+    <% if logged_in?(:labor_staff) %>
     <div class="col-md-3">
       <div class="form-group">
         <%= link_to 'Delete',
@@ -43,6 +44,7 @@
                     remote: true unless @booking.new_record? %>
       </div>
     </div>
+    <% end %>
   </div>
 <% end %>
       
