--- a/app/views/bookings/indexadmin.html.erb
+++ b/app/views/bookings/indexadmin.html.erb
@@ -1,5 +1,5 @@
 <body>
-<section id="main-content">
+<section class="ml-content">
   <section class="wrapper">
     <h3>All Bookings</h3>
     <div class="row mt mb">
@@ -10,7 +10,7 @@
           </div>
           <div class="panel-body">
             <div class="task-content">
-              <ul id='sortable' class="task-list <%= "sortable" if logged_in?(:labor_staff) %> ">
+              <ul id='sortable' class="pending <%= "sortable" if logged_in?(:labor_staff) %> ">
                 <%= render @bookings_pending %>
 
               </ul>
@@ -19,13 +19,11 @@
         </section>
       </div><!--/col-sm-2 -->
       <div class="col-sm-2 no-padding">
-        <section class="task-panel tasks-widget">
-          <div class="panel-heading">
-            <div class="pull-left"> Confirmed </div>
-          </div>
+        <section class="task-panel">
+          <div class="panel-heading"> Confirmed </div>
           <div class="panel-body">
             <div class="task-content">
-              <ul id='sortable' class="task-list <%= "sortable" if logged_in?(:labor_staff) %> ">
+              <ul id='sortable' class="confirmed <%= "sortable" if logged_in?(:labor_staff) %> ">
                 <%= render @bookings_confirmed %>
 
               </ul>
@@ -35,12 +33,10 @@
       </div><!--/col-sm-2 -->
       <div class="col-sm-2 no-padding">
         <section class="task-panel tasks-widget">
-          <div class="panel-heading">
-            <div class="pull-left"> Claimed </div>
-          </div>
+          <div class="panel-heading">Claimed</div>
           <div class="panel-body">
             <div class="task-content">
-              <ul id='sortable' class="task-list <%= "sortable" if logged_in?(:labor_staff) %> ">
+              <ul id='sortable' class="claimed <%= "sortable" if logged_in?(:labor_staff) %> ">
                 <%= render @bookings_claimed %>
 
               </ul>
@@ -50,14 +46,11 @@
       </div><!--/col-sm-2 -->
       <div class="col-sm-2 no-padding">
         <section class="task-panel tasks-widget">
-          <div class="panel-heading">
-            <div class="pull-left"> Unclaimed </div>
-          </div>
+          <div class="panel-heading">Unclaimed </div>
           <div class="panel-body">
             <div class="task-content">
-              <ul id='sortable' class="task-list <%= "sortable" if logged_in?(:labor_staff) %> ">
+              <ul id='sortable' class="unclaimed <%= "sortable" if logged_in?(:labor_staff) %> ">
                 <%= render @bookings_unclaimed %>
-
               </ul>
             </div>
           </div>
@@ -65,12 +58,10 @@
       </div><!--/col-sm-2 -->
       <div class="col-sm-2 no-padding">
         <section class="task-panel tasks-widget">
-          <div class="panel-heading">
-            <div class="pull-left"> Overdue </div>
-          </div>
+          <div class="panel-heading">Overdue </div>
           <div class="panel-body">
             <div class="task-content">
-              <ul id='sortable' class="task-list <%= "sortable" if logged_in?(:labor_staff) %> ">
+              <ul id='sortable' class="overdue <%= "sortable" if logged_in?(:labor_staff) %> ">
                 <%= render @bookings_overdue %>
 
               </ul>
@@ -80,12 +71,10 @@
       </div><!--/col-sm-2 -->
       <div class="col-sm-2 no-padding">
         <section class="task-panel tasks-widget">
-          <div class="panel-heading">
-            <div class="pull-left"> Returned </div>
-          </div>
+          <div class="panel-heading">Returned </div>
           <div class="panel-body">
             <div class="task-content">
-              <ul id='sortable' class="task-list <%= "sortable" if logged_in?(:labor_staff) %> ">
+              <ul id='sortable' class="returned <%= "sortable" if logged_in?(:labor_staff) %> ">
                 <%= render @bookings_returned %>
 
               </ul>
