implemented initial file uploading system for equipment

--- a/app/views/equipment/new.html.erb
+++ b/app/views/equipment/new.html.erb
@@ -1,1 +1,5 @@
-<%= render "form", labor_item: @labor_item %>
+<div class="container ml-content">
+  <h2>Add a new equipment</h2>
+
+  <%= render "form", labor_item: @labor_item %>
+</div>
