--- a/app/views/equipment/edit.html.erb
+++ b/app/views/equipment/edit.html.erb
@@ -1,1 +1,6 @@
-<%= render "form", labor_item: @labor_item %>
+<div class="container ml-content">
+  <h2>Edit this equipment</h2>
+
+  <%= render "form", labor_item: @labor_item %>
+
+</div>
