--- a/app/views/equipment/_form.html.erb
+++ b/app/views/equipment/_form.html.erb
@@ -33,16 +33,18 @@
         <%= f.text_area :description, autocomplete: "off", class: "form-control", rows: 3  %>
       </div>
       <div class="form-group ">
-        <%= f.file_field :main_image, class: "form-control" %>
+        <%= f.label :main_image %>
+        <span><%= f.file_field :main_image, class:'btn btn-light' %></span>
       </div>
       <div class="form-group ">
-        <%= f.file_field :thumb_image, class: "form-control" %>
+        <%= f.label :thumb_image %>
+        <span><%= f.file_field :thumb_image, class:'btn btn-light' %></span>
       </div>
     </div>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Save", class: 'btn btn-primary' %>
   </div>
 
 <% end %>
