--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,3 +1,5 @@
-<h3 class="listtext">My Bookings</h3>
-<%= render @bookings, collection: @labor_items, collection: @booking_items %>
+<div class="container ml-content">
+  <h3 class="listtext">My Bookings</h3>
+  <%= render @bookings, collection: @labor_items, collection: @booking_items %>
 
+</div>
