--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -8,12 +8,12 @@
 <div class="album">
   <div class="container">
     <p>Hi, <%= current_user.first_name %> </p>
-    <h3>New Equipment</h3>
+    <h3 class="padding-top">New Equipment</h3>
     <div class="row">
       <% @new_items.each do |new_item| %>
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card">
-          <%= image_tag new_item.thumb_image, class: "card-img-top" unless new_item.thumb_image.nil? %>
+          <%= image_tag equipment_img(new_item.thumb_image, 'thumb'), class: "card-img-top", width: '100%' %>
           <div class="card-body">
             <h4 class="card-title"><%= link_to new_item.name, equipment_path(new_item)  %></h4>
             <p class="card-text"><%= new_item.description %></p>
@@ -22,12 +22,12 @@
       </div>
       <% end %>
     </div>
-    <h3 class="headline">New Projects</h3>
+    <h3 class="padding-top">New Projects</h3>
     <div class="row">
       <% @new_projects.each do |new_project| %>
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card">
-          <%= image_tag new_project.thumb_image, class: "card-img-top" unless new_project.thumb_image.nil? %>
+          <%= image_tag project_img(new_project.thumb_image, 'thumb'), class: "card-img-top", width: '100%' %>
           <div class="card-body">
             <h4 class="card-title"><%= link_to new_project.name, project_path(new_project) %></h4>
             <p class="card-text"><%= new_project.description %></p>
@@ -36,12 +36,12 @@
       </div>
       <% end %>
     </div>
-    <h3 class="headline">Recently Booked</h3>
+    <h3 class="padding-top">Recently Booked</h3>
     <div class="row">
       <% @recently_booked_items.each do |recent_item| %>
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card">
-          <%= image_tag recent_item.thumb_image, class: "card-img-top" unless recent_item.thumb_image.nil? %>
+          <%= image_tag equipment_img(recent_item.thumb_image, 'thumb'), class: "card-img-top", width: '100%'  %>
           <div class="card-body">
             <h4 class="card-title"><%= link_to recent_item.name, equipment_path(recent_item)  %></h4>
             <p class="card-text"><%= recent_item.description %></p>
@@ -51,12 +51,12 @@
       <% end %>
     </div>
 
-      <h3 class="headline">Most Favorite Equipment</h3>
+      <h3 class="padding-top">Most Favorite Equipment</h3>
       <div class="row">
         <% @fav_items.each do |fav_item| %>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <div class="card">
-            <%= image_tag fav_item.thumb_image, class: "card-img-top" unless fav_item.thumb_image.nil? %>
+            <%= image_tag equipment_img(fav_item.thumb_image, 'thumb'), class: "card-img-top", width: '100%' %>
             <div class="card-body">
               <h4 class="card-title"><%= link_to fav_item.name, equipment_path(fav_item)  %></h4>
               <p class="card-text"><%= fav_item.description %></p>
