--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -13,7 +13,7 @@
       </div>
       <div class="form-group">
         <%= form.label :message %>
-        <%= form.text_area :message, autocomplete: "off", class: "form-control"  %>
+        <%= form.text_area :message, autocomplete: "off", class: "form-control", rows: '3'  %>
       </div>
     </div>
     <div class="col-md-6">
