--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,12 +1,16 @@
 
-<div class="regist">
-  <div class="card">
-    <div class="card-block">
-        <h3 class="card-title">Edit Booking Details </h3>
-        <%= render "form", booking: @booking %>
-        <% @booking_items.each do |booking_item| %>
-            <%= render 'list/list_row', booking_item: booking_item, labor_item: booking_item.equipment %>
-        <% end %>
+<div class="container ml-content">
+  <h3 class="card-title">Edit Booking Details </h3>
+  <div class="row">
+    <div class="col-md-6">
+      <%= render "form", booking: @booking %>
+    </div>
+    <div class="col-md-6">
+      <h5>Equipment list:</h5>
+      <% @booking_items.each do |booking_item| %>
+        <%= render 'list/list_row', booking_item: booking_item, labor_item: booking_item.equipment %>
+      <% end %>
     </div>
   </div>
+
 </div> 
