--- a/app/views/equipment/_labor_item.html.erb
+++ b/app/views/equipment/_labor_item.html.erb
@@ -1,6 +1,6 @@
 <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 mb-4">
   <div class="card h-100">
-    <%= image_tag labor_item.thumb_image, class: "card-img-top" unless labor_item.thumb_image.nil? %>
+    <%= image_tag equipment_img(labor_item.thumb_image, 'thumb'), class: "card-img-top", width: '100%' %>
     <div class="card-body">
       <h4 class="card-title"><%= link_to (labor_item.name + " - " +(labor_item.inv_nr).to_s), equipment_show_path(labor_item)  %></h4>
       <p class="card-text"><%= labor_item.description %></p>
@@ -20,7 +20,6 @@
               <span class="input-group-btn tooltip-toggle" aria-label="Try another day" tabindex="0">
                   <%= f.submit "Currently Booked", class: "btn btn-light", disabled: 'true' if logged_in?(:user) %>
               </span>
-
             </div>
 
           <% else %>
