--- a/app/views/equipment/measure.html.erb
+++ b/app/views/equipment/measure.html.erb
@@ -1,43 +1,71 @@
+<div class="container-fluid ml-content">
+  <div class="row">
+    <!-- Start of side-bar -->
+    <nav class="col-12 col-md-3 col-xl-2 bg-light ml-sidebar">
 
+      <div class="form-row">
 
-        <!-- Start of side-bar -->
-    <nav class="sidebar">
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link" href="/equipment">All Equipment </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="/measuring-equipment">Measuring <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/electric-equipment">Electronics</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/audio-equipment">Audio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/video-equipment">Video</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/computer-equipment">Computer</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/misc-equipment">Miscellaneous</a>
-        </li>
-      </ul>
-      <%= form_tag measuring_equipment_path, :method => 'get' do %>
-          <%= submit_tag 'Search by name', :name => nil , class: 'form-control btn btn-info' %>
-          <%= text_field_tag :search, params[:search], class: 'form-control mr-sm-2' %>
-      <% end %>
-      <br>
+        <div class="col-8 col-md-12">
+          <%= form_tag measuring_equipment_path, :method => 'get', class: 'my-3' do %>
+            <div class="input-group">
+              <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: "Search for…" %>
+              <span class="input-group-btn">
+                <%= submit_tag 'Go!', :name => nil , class: 'btn btn-primary' %>
+              </span>
+            </div>
+          <% end %>
+        </div>
 
-      <%= form_tag measuring_equipment_path, :method => 'get' do %>
-          <%= submit_tag 'Filter by date', :name => nil , class: 'form-control btn btn-info' %>
-          <%= label_tag 'pickup_date', 'From:' , class: 'mr-sm-2' %>
-          <%= text_field_tag :pickup_date, params[:pickup_date], class: 'form-control mr-sm-2', :data => {:provide => 'datepicker', 'date-format' => 'yyyy-mm-dd', 'date-autoclose' => 'true', 'date-start-date' => '0d'} %>
-          <%= label_tag 'return_date', 'To:' , class: 'mr-sm-2' %>
-          <%= text_field_tag :return_date, params[:return_date], class: 'form-control mr-sm-2', :data => {:provide => 'datepicker', 'date-format' => 'yyyy-mm-dd', 'date-autoclose' => 'true', 'date-start-date' => '0d'} %>
-      <% end %>
+        <div class="col-4 d-md-none d-lg-none d-xl-none">
+          <button class="btn btn-primary btn-block my-3" type="button" data-toggle="collapse" data-target="#filterEquipment" aria-expanded="false" aria-controls="filterEquipment">
+            Filter
+          </button>
+        </div>
+
+      </div>
+
+      <div class="collapse ml-filter" id="filterEquipment">
+        <ul class="nav flex-column mb-3">
+          <li class="nav-item">
+            <a class="nav-link" href="/equipment">All Equipment <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/measuring-equipment">Measuring</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/electric-equipment">Electronics</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/audio-equipment">Audio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/video-equipment">Video</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/computer-equipment">Computer</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/misc-equipment">Miscellaneous</a>
+          </li>
+        </ul>
+
+        <%= form_tag measuring_equipment_path, :method => 'get' do %>
+          <div class="form-row">
+            <div class="form-group col-6 col-md-12">
+              <%= text_field_tag :pickup_date, params[:pickup_date], class: 'form-control', placeholder: "From", :data => {:provide => 'datepicker', 'date-format' => 'yyyy-mm-dd', 'date-autoclose' => 'true', 'date-start-date' => '0d'} %>
+            </div>
+            <div class="form-group col-6 col-md-12">
+              <%= text_field_tag :return_date, params[:return_date], class: 'form-control', placeholder: "To", :data => {:provide => 'datepicker', 'date-format' => 'yyyy-mm-dd', 'date-autoclose' => 'true', 'date-start-date' => '0d'} %>
+            </div>
+          </div>
+          <%= submit_tag 'Filter by date', :name => nil , class: 'btn btn-primary mb-3' %>
+        <% end %>
+      </div>
     </nav>
     <!-- End of side-bar -->
-        <%= render 'equipment_view' %>
+
+    <%= render 'equipment_view' %>
+
+  </div>
+</div>
+
