--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -3,28 +3,29 @@
     <div class="card">
       <div class="card-block">
         <div class="row col-md-12">
-          <div class="col-md-12">
-            <h1 class="card-title">Edit Project Details</h1>
-              <div class="form-group">
-                <%= form.label :name %><br />
-                <%= form.text_field :name, class: "form-control" %>
-              </div>
-              <div class="form-group">
-                <%= form.label :description %><br />
-                <%= form.text_area :description, autofocus: true, class: "form-control"  %>
-              </div>
-              <div class="form-group">
-                <%= form.label :main_image %><br />
-                <%= form.text_area :main_image, autocomplete: "off", class: "form-control"  %>
-              </div>
-              <div class="form-group">
-                <%= form.label :thumb_image %><br />
-                <%= form.text_area :thumb_image, autocomplete: "off", class: "form-control"  %>
-              </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <%= form.label :name %><br />
+              <%= form.text_field :name, class: "form-control" %>
+            </div>
+            <div class="form-group">
+              <%= form.label :description %><br />
+              <%= form.text_area :description, autofocus: true, class: "form-control", rows: '3'  %>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <div><%= form.label :main_image %></div>
+              <div><%= form.file_field :main_image, class:'btn btn-light' %></div>
+            </div>
+            <div class="form-group">
+              <div><%= form.label :thumb_image %></div>
+              <div><%= form.file_field :thumb_image, class:'btn btn-light' %></div>
+            </div>
           </div>
           <div class="col-md-3">
             <div class="form-group">
-              <%= form.submit %>
+              <%= form.submit "Save", class: 'btn btn-primary' %>
             </div>
           </div>
         </div>
