--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,1 +1,5 @@
-<%= render "form", project: @project %>
+<div class="container ml-content">
+  <h2>Edit this project</h2>
+
+  <%= render "form", project: @project %>
+</div>
