--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,30 +1,36 @@
-<h3 class="listtext">Show Project Details</h3>
-<%= image_tag @project.main_image %>
+<div class="container ml-content">
+  <div class="row padding-top">
+    <div class="col-md-7">
+      <%= image_tag project_img(@project.main_image, 'main'), width: '100%' %>
+    </div>
+    <div class="col-md-5">
+      <h1><%= @project.name %></h1>
+      <p><%= @project.description %></p>
+      <%= link_to 'Edit', edit_project_path(@project), class: "btn btn-primary" if logged_in?(:labor_staff) %>
+      <%= link_to 'See all projects', projects_path, class: "btn btn-outline-primary" %>
+    </div>
+  </div>
 
-<h1><%= @project.name %></h1>
-<p><%= @project.description %></p>
+  <div class="row padding-top">
+    <div class="col-md-12">
+      <% if @usually_booked_items.size == 0  %>
+          <span class="headline">No equipment has been booked for this project. Be the first?</span>
+          <span><%= link_to "See all equipment", equipment_index_path, class: "btn btn-outline-primary" %></span>
+      <% else %>
+          <div class="headline">Student who choose this project usually book:</div>
+      <% end %>
+    </div>
+  </div>
 
-<%= link_to 'Edit', edit_project_path(@project), class: "btn btn-secondary" if logged_in?(:labor_staff) %>
-<%= link_to 'Back', projects_path, class: "btn btn-info" %>
-
-<div class="row ml">
-  <% if @usually_booked_items.size == 0  %>
-      <div class="headline">No equipment has been booked for this project. Be the first?</div>
-      <%= link_to "To Equipment", equipment_index_path, class: "btn btn-info ml" %>
-  <% else %>
-      <div class="headline">Student who choose this project usually book:</div>
-  <% end %>
+  <div class="row">
+    <% @usually_booked_items.each do |usually_booked_item| %>
+        <div class="home-card">
+          <%= image_tag usually_booked_item.thumb_image unless usually_booked_item.thumb_image.nil? %>
+          <p class="home-card-text"><%= link_to usually_booked_item.name, equipment_path(usually_booked_item)  %></p>
+          <p class="home-card-text"><%= usually_booked_item.description %></p>
+        </div>
+    <% end %>
+  </div>
 </div>
-
-<div class="row ml">
-  <% @usually_booked_items.each do |usually_booked_item| %>
-      <div class="home-card">
-        <%= image_tag usually_booked_item.thumb_image unless usually_booked_item.thumb_image.nil? %>
-        <p class="home-card-text"><%= link_to usually_booked_item.name, equipment_path(usually_booked_item)  %></p>
-        <p class="home-card-text"><%= usually_booked_item.description %></p>
-      </div>
-  <% end %>
-</div>
-
 
 
