--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
-        <%= form.hidden_field :user_id, value: current_user.id if logged_in?(:user)  %>
+        <%= form.hidden_field :user_id, value: current_user.id if logged_in?(:user) && !logged_in?(:labor_staff) %>
         <%= form.label :project %>
         <%= form.collection_select :project_id, Project.all,:id,:name, include_blank: true, class: "form-control"   %>
       </div>
