make More turn Less

--- a/app/views/equipment/_equipment_view.html.erb
+++ b/app/views/equipment/_equipment_view.html.erb
@@ -12,3 +12,15 @@
 <% if session[:source] %>
     <p> Thanks for visiting Mylab from <%= session[:source] %> </p>
 <% end %>
+
+<script>
+    $('.view-details').click(function(){
+        var $this = $(this);
+        $this.toggleClass('view-details');
+        if($this.hasClass('view-details')){
+            $this.text('More... »');
+        } else {
+            $this.text('... »Less');
+        }
+    });
+</script>
