--- a/app/views/list/_list_row.html.erb
+++ b/app/views/list/_list_row.html.erb
@@ -2,29 +2,33 @@
 <div class="list-group-item">
   <div class="row">
     <div class="col-4 col-sm-3 col-md-2 mb-3">
-      <%= image_tag labor_item.thumb_image, class: "img-fluid rounded" %>
+      <%= image_tag equipment_img(labor_item.thumb_image, 'thumb'), class: "img-fluid rounded" %>
     </div>
 
     <div class="col-12 col-sm-6 col-md-8 order-2 order-sm-1">
       <div class="row">
-
         <div class="col-12 col-sm-12 col-md-6">
           <h6><%= labor_item.name + " - " +(labor_item.inv_nr).to_s %></h6>
         </div>
 
         <div class="col-12 col-sm-12 col-md-6">
           <%= form_for booking_item do |f| %>
-            <div class="input-group tooltip-toggle" aria-label="Minimum: 1, maximum: available amount" tabindex="0">
+            <div class="input-group tooltip-toggle col-6 col-sm-6 col-md-3 order-1 order-sm-1 text-right" aria-label="Minimum: 1, maximum: available amount" tabindex="0">
               <span class="input-group">
                 <%= f.number_field :quantity, value: booking_item.quantity.to_i, class: "form-control", min: 1, max: labor_item.available_quantity(params[:pickup_date], params[:return_date])  %>
               </span>
-              <span class="input-group-btn">
+              <span class="col-6 col-sm-6 col-md-3 order-1 order-sm-1 text-right">
                 <%= f.submit "Update" , class: "btn btn-primary" %>
               </span>
+              <span class="col-8 col-sm-8 col-md-3 order-1 order-sm-2 text-right">
+                <%= link_to "Remove" , booking_item, { data: { confirm: "Are you sure you wish to delete the equipment '#{booking_item.equipment.name}' from your list" }, method: :delete, class: "btn btn-danger" } %>
+              </span>
             </div>
+            <br>
+            <br>
             <% if booking_item.quantity.to_i > labor_item.available_quantity(params[:pickup_date], params[:return_date]) %>
               <div class="alert alert-danger" role="alert">
-                <strong>Oh no!</strong> There is only <%= labor_item.available_quantity(params[:pickup_date], params[:return_date]) %> left to book. Please change quantity!
+                <strong>Oh no!</strong> There is <%= labor_item.available_quantity(params[:pickup_date], params[:return_date]) %> left to book. Please change quantity!
               </div>
             <% end %>
             <%= f.hidden_field :equipment_id, value: labor_item.id %>
@@ -32,10 +36,6 @@
         </div>
 
       </div>
-    </div>
-
-    <div class="col-8 col-sm-3 col-md-2 order-1 order-sm-2 text-right">
-      <%= link_to "Remove" , booking_item, { data: { confirm: "Are you sure you wish to delete the equipment '#{booking_item.equipment.name}' from your list" }, method: :delete, class: "btn btn-danger" } %>
     </div>
 
   </div>
